--- a/configure.ac.in
+++ b/configure.ac.in
@@ -60,7 +60,7 @@ AC_CHECK_FUNCS([bind_textdomain_codeset])
 dnl ******************************
 dnl *** Check for i18n support ***
 dnl ******************************
-XDT_I18N([@LINGUAS@])
+XDT_I18N([fr])
 
 dnl *******************************
 dnl *** Check for X11 installed ***
